--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/nse/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/nse/logo192.png"/><link rel="manifest" href="/nse/manifest.json"/><title>React App</title><script defer="defer" src="/nse/static/js/main.84f590f1.js"></script><link href="/nse/static/css/main.7dedfd10.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><script async src="https://www.googletagmanager.com/gtag/js?id=G-D4RJV1QYFM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-D4RJV1QYFM');
+</script>
+<meta charset="utf-8"/><link rel="icon" href="/nse/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/nse/logo192.png"/><link rel="manifest" href="/nse/manifest.json"/><title>React App</title><script defer="defer" src="/nse/static/js/main.84f590f1.js"></script><link href="/nse/static/css/main.7dedfd10.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
